# transparencia-chile-2024

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  app.py  pyproject.toml  requirements.txt  ruff.toml  settings.ini  setup.cfg
.devcontainer/: Dockerfile  devcontainer.json  requirements.txt
_proc/: 00_core.html.md  00_starter.html.md  00_starter.ipynb  index.ipynb  nbdev.yml
_proc/_docs/: core.html  core.html.md  index.html.md  robots.txt  search.json  sitemap.xml  starter.html  starter.html.md
_proc/_docs/site_libs/bootstrap/: bootstrap.min.css
data/processed/: aggregated_comunas.parquet  denuncias.parquet  establecimientos.parquet  matriculas.parquet  sep_establecimientos.parquet  tendencia_ee.parquet
docs/: README.md  mkdocs.yml
docs/docs/: index.md
nbs/: 00_starter.ipynb  index.ipynb  sidebar.yml
notebooks/: 0.01-fnce-data-fetching-1.ipynb  0.02-fnce-data-fetching-1.ipynb  0.03-fnce-data-fetching-1.ipynb  0.04-fnce-data-fetching-1.ipynb  0.05-fnce-data-fetching-1.ipynb  0.06-fnce-eda-presupuesto-2.ipynb  0.07-mjo-eda-sma-2.ipynb  0.08-fnce-eda-sma-polars-2.ipynb  0.09-fnce-eda-sedu-2.ipynb  0.10-fnce-eda-sedu-3.ipynb  0.11-fnce-eda-sedu-4.ipynb  0.12-fnce-eda-sedu-5.ipynb  0.13-fnce-eda-sedu-6.ipynb  0.14-fnce-cleaning-sedu-1.ipynb  0.16-fnce-revisando-matriculados-colegios-duplicados.ipynb  0.19-fnce-visualization.ipynb  transparenta2024links.csv
transparencia_chile_2024/: __init__.py  _modidx.py  config.py  core.py  dataset.py  features.py  plots.py  starter.py
transparencia_chile_2024/modeling/: predict.py  train.py
transparencia_chile_2024/pages/: __init__.py  page.py
