[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "transparencia_chile_2024"
version = "0.0.1"
description = "Proyecto de transparencia de datos, por Marrr\u00eda Jos\u00e9 \u00d3rdenes R. y Felipe Cabello E."
authors = [
  { name = "Equipo T (Transparentados)" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.12"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["transparencia_chile_2024"]
force_sort_within_sections = true
