[project]
name = "Transparenta2024"
version = "0.1.0"
description = "Transparenta datos 2024"
authors = [{ name = "a5chin" }]
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
  "jupyter",
  "ipython",
  "geopandas",
  "ipywidgets",
  "isort",
  "jupyterlab",
  "matplotlib",
  "mkdocs",
  "nbdev",
  "notebook",
  "numpy",
  "pandas",
  "pip",
  "python-dotenv",
  "requests",
  "tqdm",
  "ipykernel",
  "jupyterlab-quarto>=0.3.5",
]

[tool.uv]
dev-dependencies = ["pytest>=8.3.2", "pre-commit>=3.8.0", "ruff>=0.6.2"]
